// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer className is test_drawer 1`] = `
<div
  class=""
>
  <div
    class="infini-drawer infini-drawer-right test_drawer"
  >
    <div
      class="infini-drawer-mask"
    />
    <div
      class="infini-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="infini-drawer-content"
      >
        <div
          class="infini-drawer-wrapper-body"
          style="overflow:auto;height:100%;opacity:0;transition:opacity .3s"
        >
          <div
            class="infini-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="infini-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="infini-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer closable is false 1`] = `
<div
  class=""
>
  <div
    class="infini-drawer infini-drawer-right"
  >
    <div
      class="infini-drawer-mask"
    />
    <div
      class="infini-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="infini-drawer-content"
      >
        <div
          class="infini-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="infini-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer destroyOnClose is true 1`] = `
<div
  class=""
>
  <div
    class="infini-drawer infini-drawer-right"
  >
    <div
      class="infini-drawer-mask"
    />
    <div
      class="infini-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="infini-drawer-content"
      >
        <div
          class="infini-drawer-wrapper-body"
          style="overflow:auto;height:100%;opacity:0;transition:opacity .3s"
        >
          <div
            class="infini-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="infini-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="infini-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a title 1`] = `
<div
  class=""
>
  <div
    class="infini-drawer infini-drawer-right"
  >
    <div
      class="infini-drawer-mask"
    />
    <div
      class="infini-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="infini-drawer-content"
      >
        <div
          class="infini-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="infini-drawer-header"
          >
            <div
              class="infini-drawer-title"
            >
              Test Title
            </div>
            <button
              aria-label="Close"
              class="infini-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="infini-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render correctly 1`] = `
<div
  class=""
>
  <div
    class="infini-drawer infini-drawer-right"
  >
    <div
      class="infini-drawer-mask"
    />
    <div
      class="infini-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="infini-drawer-content"
      >
        <div
          class="infini-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="infini-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="infini-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="infini-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render top drawer 1`] = `
<div
  class=""
>
  <div
    class="infini-drawer infini-drawer-top"
  >
    <div
      class="infini-drawer-mask"
    />
    <div
      class="infini-drawer-content-wrapper"
      style="transform:translateY(-100%);-ms-transform:translateY(-100%);height:400px"
    >
      <div
        class="infini-drawer-content"
      >
        <div
          class="infini-drawer-wrapper-body"
        >
          <div
            class="infini-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="infini-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="infini-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
